# learnfastai

./: .gitignore  chapter1.ipynb  hello.py  how_nn_learn.ipynb  pyproject.toml  simple_fun.ipynb
course/part1/: chapter1.ipynb  chapter3_nn.ipynb  lesson5_nn_titanic.ipynb
