[project]
name = "learnfastai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=7.2.1",
    "fastbook>=0.0.29",
    "kaggle>=1.6.17",
    "mplcursors>=0.6",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
]

[dependency-groups]
dev = [
    "notebook>=7.3.2",
]
